legacy/additional_testing/gcc_crash_stats/results/gcc540/save_st/pr69974.c-5.4.0-0.out.txt
pr69974.c:6:10: error: storage size of ‘a’ isn’t known
 struct S a;  
          ^
